# ManagerDesk

./: Aplication.py  CRUDs.py  Funcs1.py  Login.db  pyproject.toml
DB_/: CRUDs.py  DB_.db  DMLs_DB.py
Login_sistem/: DB_Login.db  Login.py  __init__.py  tempCodeRunnerFile.py
MDesk/: Aplication.py  Funcs1.py  __init__.py  tempCodeRunnerFile.py
MDesk/DB_/: CRUDs.py  DB_.db  tempCodeRunnerFile.py
