[tool.poetry]
name = "managerdesk"
version = "0.1.0"
description = "A manager setup for build and develop wallet with financial parameters"
authors = ["Victor Papini Costelletos <victorcostelletos@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
